--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="default_web_client_id">791338621096-862ciq3beo1144lcfuf863t0ol0ne9i5.apps.googleusercontent.com</string>
 </resources>
